hphp/test/zend/bad/ext/date/tests/bug54283.php
<?php

try {
	var_dump(new DatePeriod(NULL));
} catch (Exception $e) {
	var_dump($e->getMessage());
}

?>